correcting category and points spacing

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 }
 
 body {
-    background-color: white;
     margin: 0;
     height: 100vh;
     width: 100vw;
@@ -17,20 +16,15 @@ body {
 body::after {
     content: "";
     background-image: url("../images/wallpaper.jpg");
+    opacity: 0.5;
     background-size: cover;
     background-repeat: no-repeat;
-    opacity: 0.5;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     position: absolute;
     z-index: -1;
-}
-
-.mainContainer {
-    border: solid black;
-    margin: 2;
 }
 
 .headerContainer {
@@ -57,15 +51,18 @@ body::after {
 
 .categoriesContainer {
     display: flex;
+    justify-content: space-around;
 }
 
 .containers {
     display: flex;
+    justify-content: space-around;
 }
 
 .bigContainer {
     position: absolute;
-    margin: 0 250px;
+    width: 100vw;
+    border: solid black;
 }
 
 .questionDisplay {
@@ -75,7 +72,7 @@ body::after {
     z-index: 1;
     display: none;
     display: flex;
-    margin: 100px 425px;
+    margin: 100px auto;
     justify-content: center;
     align-items: center;
 }
@@ -88,7 +85,7 @@ body::after {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin: 10px auto;
     background-color: black;
     color: white;
     text-shadow: 1px 1px 5px #6cc04a;
@@ -112,8 +109,6 @@ body::after {
     
 }
 
-
-
 .answerContainer {
     display: flex;
     justify-content: space-around;
@@ -122,7 +117,7 @@ body::after {
 
 .answer {
     border: solid black;
-    margin: 0 10 px;
+    margin: 0 auto;
     height: 100px;
     width: 175px;
     font-size: 25px;
@@ -141,7 +136,7 @@ body::after {
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    margin: 15px;
+    /* margin: 15px; */
     text-align: center;
     background-color: black;
     color: white;
@@ -156,7 +151,7 @@ body::after {
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    margin: 15px;
+    /* margin: 15px; */
     color: black;
     background-color: #E1E3E3;
 }
@@ -177,7 +172,7 @@ body::after {
     height: 800px;
     position: absolute;
     border-radius: 10px;
-    margin: 0 400px;
+    margin: 0 auto;
     background-image: url("../images/portalImage.gif");
     background-size: cover;
     background-repeat: no-repeat;
@@ -195,7 +190,7 @@ body::after {
     height: 800px;
     position: absolute;
     border-radius: 10px;
-    margin: 0 400px;
+    margin: 0 auto;
     background-image: url("../images/portalImage.gif");
     background-size: cover;
     background-repeat: no-repeat;
